[tool.poetry]
name = "dicom2png"
version = "0.1.0"
description = ""
authors = ["rechka <root@localhost>"]

[tool.poetry.dependencies]
python = "^3.8"
mritopng = "^2.2"
pylibjpeg = "^1.3.0"
pylibjpeg-libjpeg = "^1.2.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.12.1"
black = "^21.5b1"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
